@@ -15,6 +15,7 @@
     <li><a href="#License">License</a></li>
     <li><a href="#Support">Support</a></li>
     <li><a href="#Contribute">Contribute</a></li>
+    <li><a href="#KnownIssues">Known Issues</a></li>
     <li><a href="#Contact">Contact</a></li>
 </ul>
 
@@ -81,6 +82,48 @@ If there is any technical problem with Specvis, please go to <a href="https://gi
 <p>
 If you have an idea how Specvis Desktop can be improved, for example what new functionalities can be introduced to its future versions, please don't hesitate to contact me. Remember, that Specvis Desktop aims to be a vision diagnostic software tool.
 </p>
+
+<h2 id="KnownIssues">Known Issues</h2>
+
+<ul>
+    <li><b>Problem:</b> Specvis Desktop is not running when double clicked on</b> <code>Specvis.jar</code></li>
+    <ul>
+    <li><i>Explanation:</i> The most plausible explanation to this problem is that you try to run Specvis Desktop from the location where you need to have administrative permissions. For example, if you downloaded Specvis Desktop on your main drive/partition (most likely "C") which is also a drive with an operating system installed on it and drive/partition is protected with administrative permissions then running Specvis Desktop by simply double clicking on it can be impossible.</li>
+    <li><i>Solution:</i> If you want to keep Specvis Desktop on a restricted drive/partition, then you can run the application via command prompt. However, commant prompt should be launched with the use of "run as the administrator" mode. Other, simpler solution to the problem, is to just place Specvis Desktop folder in a location, where any administrative permissions are not required for the user.</li>
+    </ul>
+</ul>
+
+<ul>
+    <li><b>Problem:</b> Issues with launching/running Specvis Desktop using JRE in higher versions then 8u121</li>
+    <ul>
+        <li><i>Explanation:</i> You can face some problems while trying to launch/run Specvis Desktop using JRE in version 11 or higher. It's due to the fact that Specvis Desktop uses JavaFX library for which Oracle (official developer of the Java programming language) made it open sourced from JRE 11 and later releases, thus stopped official support of it with their runtime environments.</li>
+        <li><i>Solution:</i> If you want to use newer version of JRE you can supplement lack of the official JavaFX library support by installing <a href="https://openjfx.io/">openjfx</a> library. When installation is completed you just have to point to an appropriate jfx modules while running Specvis Desktop (using command prompt is required) <code>java --module-path path1/openjfx/lib --add-modules javafx.controls,javafx.fxml -jar path2/Specvis.jar</code>. Remember, that <code>path1</code> and <code>path2</code> has to point to direct paths to openjfx folder and Specvis Desktop folder, respectively. However, if possible, it is recommended to use specifically JRE in version 8u121.</li>
+    </ul>
+</ul>
+
+<ul>
+    <li><b>Problem:</b> Despite changing the settings, Specvis Desktop behaves as if the settings have not been changed.</li>
+    <ul>
+        <li><i>Explanation:</i> Specvis Desktop uses few input fields for numerical values where you can type arbitraty input by yourself. However, Specvis Desktop will not save automatically provided value unless you will "accept" provided value.</li>
+        <li><i>Solution:</i> When changing settings with the use of input fields make sure that you hit ENTER after typing a desired value in the field.</li>
+    </ul>
+</ul>
+
+<ul>
+    <li><b>Problem:</b> Visual field examination procedure is interrupted by Specvis Desktop crash/error.</li>
+    <ul>
+        <li><i>Explanation:</i> There are situations when Specvis Desktop visual field examination procedure can be interrupted or it can crash. The result of such crash is: 1) freeze of the procedure or 2) visual field graphical map indicating that no responses were provided by the patient during the test.</li>
+        <li><i>Solution:</i> Make sure, that all settings numerical inputs you provide are confirmed by hitting ENTER key on your keyboard. If problem persists, do not use any of the available fixation (gaze) monitor techniques.</li>
+    </ul>
+</ul>
+
+<ul>
+    <li><b>Problem:</b> Specvis Desktop freezes during the attempt to redraw visual field graphical map.</li>
+    <ul>
+        <li><i>Explanation:</i> Specvis Desktop uses pretty complicated computation to create visual field graphical map based on the results from the test. Thus, it takes time, to redraw the map after changing isofactor and interpolation values, whereas time it takes depends on the hardware configuration you are using (computational power). The lower the isofactor value and the higher the interpolation value, the longer time needed for the computations standing behind redraw function.</li>
+        <li><i>Solution:</i> Wait. Specvis Desktop thinks. You can also use higher isofactor and lower interpolation values in order to decrease time needed for redrawing the visual field graphical map.</li>
+    </ul>
+</ul>
 
 <h2 id="Contact">Contact</h2>
 <p>For any questions write at <b>piotr.dzwiniel@gmail.com</b>.</p>
